<resources>
    <string name="app_name">ADB Remote ATV</string>
    <string name="text_sound">声音</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_num_1">1</string>
    <string name="text_num_2">2</string>
    <string name="text_num_3">3</string>
    <string name="text_num_4">4</string>
    <string name="text_num_5">5</string>
    <string name="text_num_6">6</string>
    <string name="text_num_7">7</string>
    <string name="text_num_8">8</string>
    <string name="text_num_9">9</string>
    <string name="text_Tv">TV</string>
    <string name="text_num_0">0</string>
    <string name="text_menu">菜单</string>
    <string name="text_setting">设置</string>
    <string name="text_keyboard">键盘</string>
    <string name="ic_home">主页</string>
    <string name="text_num_keyboard">数字键盘</string>
    <string name="text_return">返回</string>
    <string name="text_add_sound">增加音量</string>
    <string name="text_subtract_sound">减少音量</string>
    <string name="text_prev_video">上一集</string>
    <string name="text_back_video">倒退</string>
    <string name="text_play_or_pause">播放暂停</string>
    <string name="text_forward_video">快进</string>
    <string name="text_next_video">下一集</string>
    <string name="text_close_tv">关机</string>
    <string name="text_select_connect">选择连接</string>
    <string name="text_connection_failed">连接失败</string>
    <string name="text_connection_successful">连接成功</string>
    <string name="text_add">添加</string>
    <string name="ic_delete">删除</string>
    <string name="ic_edit">编辑</string>
    <string name="ic_more">更多</string>
    <string name="text_connect_android_tv">连接Android TV</string>
    <string name="text_create_new_connect">创建新连接</string>
    <string name="text_alias">别名</string>
    <string name="text_ip">IPV4地址</string>
    <string name="text_port">端口</string>
    <string name="text_cancel">取消</string>
    <string name="text_ok">确认</string>
    <string name="text_default_port">5555</string>
    <string name="text_mute">静音</string>
    <string name="text_quirk">怪癖</string>
    <string name="text_layout">界面布局</string>
    <string name="text_enter">前往</string>
    <string name="text_action">按键行为</string>
    <string name="text_manage_app">管理应用程序</string>
    <string name="text_app">应用</string>
    <string name="text_fallback">反馈</string>
    <string name="text_about">关于</string>
    <string name="text_share">分享</string>
    <string name="text_github">Github</string>
    <string name="text_quick_access">快速访问</string>
    <string name="text_media_button">媒体按钮</string>
    <string name="text_desc_media_button">媒体上一个、快退、播放/暂停、快进和下一个按钮</string>
    <string name="text_desc_app">轻松打开电视上安装的应用程序</string>
    <string name="text_noting">没有东西</string>
    <string name="text_desc_noting">导航的大小将增加</string>
    <string name="text_navigation">导航</string>
    <string name="text_direction_key">方向键</string>
    <string name="text_desc__direction_key">基于点击控制，就像物理遥控器上那样</string>
    <string name="text_behavior">按键行为</string>
    <string name="text_haptic_feedback">震动反馈</string>
    <string name="text_desc_haptic_feedback">按下遥控器按钮时的轻微震动反馈</string>
    <string name="text_remove">删除</string>
    <string name="text_edit">编辑</string>
    <string name="text_drag">拖拽</string>
    <string name="text_add_new_app">添加新应用</string>
    <string name="text_name">应用名称</string>
    <string name="text_icon_url">图标链接</string>
    <string name="text_star_url">启动路径</string>
    <string name="text_add_online_json">配置地址</string>
    <string name="text_config_url">配置地址</string>
    <string name="text_online_url">在线地址</string>
    <string name="text_add_apps">添加应用</string>
    <string name="text_add_online">软件仓库</string>
    <string name="text_ip_error">IPV4地址不符合要求</string>
    <string name="text_port_error">非法端口</string>
    <string name="text_app_name_error">请填写应用名称</string>
    <string name="text_app_icon_error">图标链接错误</string>
    <string name="text_app_url_error">APP启动路径错误</string>
    <string name="text_url_error">配置地址格式错误</string>
    <string name="share_app_to">分享到</string>
    <string name="text_update">更新</string>
    <string name="text_no_need_update">无需更新</string>
    <string name="text_update_app">更新软件</string>
    <string name="text_close">关闭</string>
    <string name="text_make_sure_focus_input">请确保 Android TV 键盘已打开</string>
    <string name="text_start_input">开始打字…</string>
    <string name="text_confirm">确认</string>
    <string name="text_input_chinese">输入中文</string>
    <string name="text_input_chinese_tip">中文输入需要 ADBKeyboard 的支持，请确保 Android TV 上已经安装 ADBKeyboard。点击“下载”按钮在 Android TV 上打开下载网址</string>
    <string name="text_download">下载</string>
    <string name="text_input_chinese_unless">无法输入中文?</string>
    <string name="text_backspace">退格</string>
    <string name="text_custom">自定义</string>
    <string name="text_rep_github">官方Github仓库</string>
    <string name="text_rep_gitee">官方Gitee仓库</string>
    <string name="text_switch_failed">切换失败</string>
    <string name="text_switch_successful">切换成功</string>
    <string name="text_en_zh">英/中</string>
    <string name="text_zh_en">中/英</string>
    <string name="text_empty">没获取到</string>
    <string name="text_update_failed">更新失败</string>
    <string name="text_prompt_message">提示信息</string>
    <string name="text_permission_msg">当前应用缺少必要权限，该功能暂时无法使用。如若需要，请单击【确定】按钮前往设置中心进行权限授权。</string>
    <string name="text_remove_app">移除应用程序</string>
    <string name="text_remove_app_info">确定要删除此应用程序?</string>
    <string name="text_remove_connect">删除连接</string>
    <string name="text_remove_connect_info">你确定要删除选中的连接?</string>
</resources>