<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_custom_dialog"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_config_url"
        android:layout_marginBottom="16dp"
        android:textColor="@color/text_color"
        android:textSize="16sp" />


    <com.swx.adbremote.components.NewTextInputLayout
        android:id="@+id/input_layout_online_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/text_color"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/errorTextAppearance"
        app:hintTextAppearance="@style/hintAppearance">

        <EditText
            android:id="@+id/et_online_config_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_input"
            android:contentDescription="@string/text_online_url"
            android:ems="10"
            android:hint="@string/text_online_url"
            android:inputType="text"
            android:textColor="@color/text_color"
            android:textColorHint="@color/line_color"
            android:textSize="14sp"
            tools:ignore="ContentDescription" />
    </com.swx.adbremote.components.NewTextInputLayout>

    <RadioGroup
        android:id="@+id/rg_rep_url"
        android:layout_width="match_parent"
        android:theme="@style/MyRadioButton"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_rep_github"
            android:text="@string/text_rep_github"
            android:layout_width="wrap_content"
            android:textColor="@color/text_color"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_rep_gitee"
            android:text="@string/text_rep_gitee"
            android:layout_width="wrap_content"
            android:textColor="@color/text_color"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_url_negative"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/background_btn_tr"
            android:padding="6dp"
            android:text="@string/text_cancel"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/btn_url_positive"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_btn_tr"
            android:padding="6dp"
            android:text="@string/text_ok"
            android:textColor="@color/green" />
    </LinearLayout>

</LinearLayout>