<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_custom_dialog"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_create_new_connect"
        android:layout_marginBottom="10dp"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:textColorHint="@color/text_color"
        app:errorTextAppearance="@style/errorTextAppearance"
        app:hintTextAppearance="@style/hintAppearance">

        <EditText
            android:id="@+id/text_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/text_alias"
            android:inputType="text"
            android:textColor="@color/text_color"
            android:textColorHint="@color/line_color"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.swx.adbcontrol.components.NewTextInputLayout
        android:id="@+id/input_layout_text_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:errorEnabled="true"
        android:textColorHint="@color/text_color"
        app:errorTextAppearance="@style/errorTextAppearance"
        app:hintTextAppearance="@style/hintAppearance">

        <EditText
            android:id="@+id/text_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/text_ip"
            android:focusableInTouchMode="true"
            android:inputType="text"
            android:textColor="@color/text_color"
            android:textColorHint="@color/line_color"
            android:textSize="14sp" />
    </com.swx.adbcontrol.components.NewTextInputLayout>

    <com.swx.adbcontrol.components.NewTextInputLayout
        android:id="@+id/input_layout_text_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:textColorHint="@color/text_color"
        app:errorTextAppearance="@style/errorTextAppearance"
        app:hintTextAppearance="@style/hintAppearance">

        <EditText
            android:id="@+id/text_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/text_port"
            android:inputType="text"
            android:text="@string/text_default_port"
            android:textColor="@color/text_color"
            android:textColorHint="@color/line_color"
            android:textSize="14sp" />
    </com.swx.adbcontrol.components.NewTextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/background_btn_tr"
            android:padding="6dp"
            android:text="@string/text_cancel"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/btn_positive"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_btn_tr"
            android:padding="6dp"
            android:text="@string/text_ok"
            android:textColor="@color/green" />
    </LinearLayout>

</LinearLayout>